<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateExercise">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:text="Create a new exercise" />

            <EditText
                android:id="@+id/ExerciseNameBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Exercise Name" />

            <EditText
                android:id="@+id/RepNumBox"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="67dp"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:inputType="number"
                android:hint="Rep's" />

            <EditText
                android:id="@+id/SetNumBox"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="251dp"
                android:layout_marginTop="-45dp"
                android:ems="10"
                android:inputType="number"
                android:hint="Set's" />

            <EditText
                android:id="@+id/Notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:inputType="textMultiLine"
                android:hint="Notes"/>

            <Button
                android:id="@+id/button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="50dp"
                android:text="Confirm" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>